trying dynamic navbar

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <!--Text here-->
         </div>
        <div class="container">
-        <ul class="container-flex-row">
+        <!-- <ul class="container-flex-row">
             <li><a href="#about" class="button about-me-button hide">About</a></li>
             <li><a href="#projects" class="button project-button m-left-2 hide">Projects</a></li>
             <li><a href="assets/resume/DJBResume March 2020.pdf" target="_blank" class="button about-me-button m-left-2 hide">Resume</a></li>
-        </ul>
+        </ul> -->
     </div>
     </div>
-<hr>
+
    <div id="about" class="container-flex m-top-42 p-left-5 m-left-10">
        
             <div class="container-flex">
