working on getting a functioning typed navbar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body> 
     <div id="intro-container" class="container-flex m-top-12">
         <div class="typed-intro" id="typedIntro">
-            <!--Text here-->
+            <p class="p-text montserrat m-top-2"><span class="typed-person"></span><br>
+            <span class="typed-navbar"></span></p>
         </div>
        <div class="container">
         <!-- <ul class="container-flex-row">
