adding more styling to create a vscode theme

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <title>Test | Portfolio</title>
 </head>
 
-<body> 
-    <div id="intro-container" class="container-flex m-top-12 m-left-10">
-        <div class="typed-intro m-left-10" id="typedIntro">
-            <p class="p-text montserrat m-top-2"></p>
+<body>
+    <div class="container bg-black">
+        <div id="intro-container" class="container-flex m-top-12 m-left-10">
+            <div class="typed-intro m-left-10" id="typedIntro">
+                <p class="p-text montserrat m-top-2"></p>
+            </div>
         </div>
-    </div>
 
-   <div id="about" class="container m-top-42 p-left-5 m-left-10">
+        <div id="about" class="container m-top-42">
             <div class="container-flex">
                 <h1 class="p-left-5">About me here</h1>
                 <p class="p-ar-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, natus nulla! Deserunt
@@ -37,9 +38,9 @@
                     aliquam illo explicabo, adipisci esse molestiae aperiam veniam nesciunt quibusdam assumenda tempore
                     dolorum obcaecati expedita. Est, quia ipsum?</p>
             </div>
-    </div>
-    <div id="projects" class="container-flex m-left-10 m-top-42 p-left-5">
-       
+        </div>
+        <div id="projects" class="container-flex m-top-42">
+
             <h1 class="p-left-5">Projects</h1>
             <div class="project-container p-ar-5">
                 <div class="container-flex-row">
@@ -49,10 +50,12 @@
                     <div class="project"></div>
                 </div>
             </div>
-    </div>
-        <footer class="footer">
-            <h1>Footer</h1>
-        </footer>
+        </div>
+       
+    </div> 
+    <footer class="footer">
+        <h1>Footer</h1>
+    </footer>
 </body>
 
 </html>
