cleaning up typewriter effect

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container bg-black">
-        <div id="intro-container" class="container-flex m-top-12 m-left-10">
+        <div id="intro-container" class="container m-top-12">
             <div class="typed-intro m-left-10" id="typedIntro">
                 <p class="p-text montserrat m-top-2"></p>
             </div>
@@ -22,7 +22,7 @@
             <div class="container-flex">
                 <h1 class="p-left-5">About me here</h1>
                 <p class="p-ar-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, natus nulla! Deserunt
-                    distinctio animi
+                    distinctio anim
                     quod alias libero maiores necessitatibus eligendi est explicabo ea cum, praesentium laboriosam nisi
                     maxime quasi aperiam!
                     Iusto dolores voluptatem, totam impedit qui voluptatibus aspernatur recusandae cupiditate blanditiis
