--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/master.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/dan.css">
     <script src="assets/js/index.js" defer></script>
     <script src="assets/js/projects.js" defer></script>
     <title>Test | Portfolio</title>
 </head>
 
 <body>
-    <div class="container bg-black">
+    <div class="container">
         <div id="intro-container" class="container m-top-12">
             <div class="typed-intro m-left-10" id="typedIntro">
                 <p class="p-text montserrat m-top-2"></p>
@@ -20,23 +21,15 @@
 
         <div id="about" class="container m-top-42">
             <div class="container-flex">
-                <h1 class="p-left-5">About me here</h1>
-                <p class="p-ar-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, natus nulla! Deserunt
-                    distinctio anim
-                    quod alias libero maiores necessitatibus eligendi est explicabo ea cum, praesentium laboriosam nisi
-                    maxime quasi aperiam!
-                    Iusto dolores voluptatem, totam impedit qui voluptatibus aspernatur recusandae cupiditate blanditiis
-                    nisi, doloribus non esse doloremque error praesentium, sed voluptate asperiores repudiandae. Impedit
-                    rem ea facilis, cupiditate pariatur neque laborum.
-                    Commodi perferendis reprehenderit, ea facere blanditiis magnam rem illum architecto quibusdam
-                    aliquid magni ducimus cumque dolorem voluptates. Pariatur a possimus est hic alias laudantium, nisi
-                    quam eveniet non ut consectetur.
-                    Doloribus et nam dolorem inventore nihil rem aspernatur accusantium maxime molestiae sint earum est
-                    omnis nobis placeat pariatur natus fugit, soluta atque repellendus odit. Maxime modi eveniet rem
-                    veritatis earum.
-                    Numquam eum debitis optio consequuntur sunt reiciendis hic, placeat asperiores beatae recusandae
-                    aliquam illo explicabo, adipisci esse molestiae aperiam veniam nesciunt quibusdam assumenda tempore
-                    dolorum obcaecati expedita. Est, quia ipsum?</p>
+                <div id="dan"></div>
+                <p class="p-ar-5 montserrat">I got into web development at the tender age of 29 and have been pursuing the ability to create websites that stand out ever since.
+                    I grew around the web and web technologies, my mom was a sql database developer and web master at the forefront of the industry back in the late nineties and into the two-thousands.
+                    During that time I developed a basic udenrstanding of how the internet worked via servers, file transfers, and download speeds.
+                    I remember early sites like newgrounds.com, neopets, and other browser games that kept me glued to the screen for hours. I didn't really start to ask how people created these things until late into my twenties and eventually
+                    took a deep dive into web-development learning everything I possibly could about the process from front to back. Currently building simple websites and applications (some with a fair amount of complexity) with html, css, javascript
+                    , and reactjs. For backend projects and parts of projects I generally use nodejs and the express framework. 
+
+                </p>
             </div>
         </div>
         <div id="projects" class="container-flex m-top-42">
