formatting about-me p-text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="about" class="container m-top-42">
             <div class="container-flex">
                 <div id="dan"></div>
-                <p class="p-ar-5 m-left-10 montserrat">
+                <p class="p-ar-5 m-left-12 m-top-2 montserrat">
                     I got into web development at the tender age of 29 and have been pursuing the ability to create websites that stand out ever since.
                     I grew around the web and web technologies, my mom was a sql database developer and web master at the forefront of the industry back in the late nineties and into the two-thousands.
                     During that time I developed a basic udenrstanding of how the internet worked via servers, file transfers, and download speeds.
