removed unecessary styling in css file

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 
 <body>
     <div class="container">
-        <div id="intro-container" class="container m-top-12">
-            <div class="typed-intro m-left-10" id="typedIntro">
-                <p class="p-text montserrat m-top-2"></p>
+        <div id="intro-container" class="intro-container m-top-12">
+            <div class="typed-intro" id="typedIntro">
             </div>
         </div>
 
-        <div id="about" class="container m-top-42">
+        <div id="about" class="container">
             <div class="container-flex">
                 <div id="dan"></div>
                 <p class="p-ar-5 m-left-12 m-top-2 montserrat">
