--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container-flex">
                 <div id="dan"></div>
                 <p class="p-ar-5 m-left-12 m-top-2 montserrat">
-                    I got into web development at the tender age of 29 and have been pursuing the ability to create websites that stand out ever since.
+                    I got into web development at the tender age of 29 and have been learning development ever since.
                     I grew up around the web and web technologies, my mom was a sql database developer and web master at the forefront of the industry back in the late nineties and into the two-thousands.
                     During that time I developed a basic udenrstanding of how the internet worked via servers, file transfers, and download speeds.
                     I remember early sites like newgrounds.com, neopets, and other browser games that kept me glued to the screen for hours. I didn't really start to ask how people created these things until late into my twenties and eventually
