pretty much finished vscode effect

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 <body>
     <div class="container">
        
-            <div id="intro-container" class="intro-container m-top-12">
+            <div id="intro-container" class="intro-container">
                 <div class="vscode-effect">
-                    <button class="vscode-file-name">index.js</button>
+                    <ul>
+                        <li><a href="">LinkedIn</a></li>
+                        <li><a href="">Github</a></li>
+                        <li><a href="assets/resume/DJBResume March 2020.pdf" target="_blank">Resume</a></li>
+                    </ul>
                     
                 </div>
                 <div class="typed-intro" id="typedIntro">
