fixing typos in about me section

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 <p class="montserrat">
                     I got into web development at the tender age of 29 and have been learning development ever since.
                     I grew up around the web and web technologies, and
-                    during that time I developed a basic udenrstanding of how the internet worked via servers, file
+                    during that time I developed a basic understanding of how the internet worked via servers, file
                     transfers, and
                     download speeds.
-                    Currently building simple websites and applications (some with a fair amount of complexity) with
+                    Currently building simple websites and applications with
                     html, css,
                     javascript
                     , and reactjs. For backend projects and parts of projects I generally use nodejs and the express
