working on project layout

--- a/index.html
+++ b/index.html
@@ -29,9 +29,27 @@
                 <h1>Recent Work</h1>
                 <div class="project-row">
                     <div class="project"></div>
+                    <div class="project-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore nulla id velit quam?
+                            Accusamus, quaerat. Deserunt exercitationem quod et tenetur possimus, adipisci voluptates,
+                            necessitatibus voluptate corrupti quam tempora praesentium ad!</p>
+                    </div>
+                </div>
+                <div class="project-row">
                     <div class="project"></div>
+                    <div class="project-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore nulla id velit quam?
+                            Accusamus, quaerat. Deserunt exercitationem quod et tenetur possimus, adipisci voluptates,
+                            necessitatibus voluptate corrupti quam tempora praesentium ad!</p>
+                    </div>
+                </div>
+                <div class="project-row">
                     <div class="project"></div>
-                    <div class="project"></div>
+                    <div class="project-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore nulla id velit quam?
+                            Accusamus, quaerat. Deserunt exercitationem quod et tenetur possimus, adipisci voluptates,
+                            necessitatibus voluptate corrupti quam tempora praesentium ad!</p>
+                    </div>
                 </div>
             </div>
             <div id="about" class="container-about">
