added icons to sidebar

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
                 <div id="dan"></div>
             </div>
             <ul>
-                <li><a href="https://www.linkedin.com/in/daniel-beccaria-29270293/" target="_blank">LinkedIn</a></li>
-                <li><a href="https://github.com/timegated" target="_blank">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/daniel-beccaria-29270293/" target="_blank"><i
+                            class="fab fa-linkedin"></i>
+                    </a></li>
+                <li><a href="https://github.com/timegated" target="_blank"><i class="fab fa-github"></i>
+                    </a></li>
                 <li><a href="assets/resume/DJBResume March 2020.pdf" target="_blank">Resume</a></li>
             </ul>
         </div>
@@ -37,7 +40,7 @@
         
     </footer> -->
     </div>
-
+    <script src="https://kit.fontawesome.com/7e8ea69633.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
