added responsive sidebar for mobile layouts

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
 <body>
     <div class="content-wrapper">
+        <div class="nav-right-hamburger">
+            <div class="hamburger-button" id="button">
+                <div class="bar top"></div>
+                <div class="bar middle"></div>
+                <div class="bar bottom"></div>
+            </div>
+        </div>
         <div class="navbar">
             <div id="about" class="container-about">
                 <div id="dan"></div>
