restructured css files with a master css file at the center/top level

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/danmq.css">
+    <link rel="stylesheet" href="assets/css/master.css" type="text/css">
     <script src="assets/js/index.js" async></script>
     <title>DJB</title>
 </head>
@@ -39,7 +38,7 @@
                 </div>
             </div>
             <!--Projects-->
-            <div id="projects" class="container-projects flex-projects">
+            <div id="projects" class="flex-projects">
 
             </div>
         </div>
