added box-shadow property to project image containers, working on responsive design

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="navbar">
             <div id="about" class="container-about">
-                <div id="dan"></div>
+                <div class="sp-pixel"></div>
             </div>
             <ul>
                 <li><a href="https://www.linkedin.com/in/daniel-beccaria-29270293/" target="_blank"><i
