--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 
 <body>
-    <div class="content-wrapper">
-        <div class="nav-right-hamburger">
-            <div class="hamburger-button" id="button">
-                <div class="bar top"></div>
-                <div class="bar middle"></div>
-                <div class="bar bottom"></div>
-            </div>
-        </div>
-        <div class="navbar">
+    <header>
+        <a href="#main-menu" id="main-menu-toggle" class="menu-toggle" aria-label="Open main menu">
+            <span class="sr-only"></span>
+            <span class="fa fa-bars" aria-hidden="true"></span>
+        </a>
+        <nav id="main-menu" class="main-menu" aria-label="Main menu">
+            <a href="#main-menu-toggle" id="main-menu-close" class="menu-close" aria-label="Close main menu">
+                <span class="sr-only">Close main menu</span>
+                <span class="fa fa-close" aria-hidden="true"></span>
+            </a>
             <div id="about" class="container-about">
                 <div class="sp-pixel"></div>
             </div>
@@ -30,7 +31,10 @@
                     </a></li>
                 <li><a href="assets/resume/DJBResume March 2020.pdf" target="_blank">Resume</a></li>
             </ul>
-        </div>
+        </nav>
+        <a href="#main-menu-toggle" class="backdrop" tabomdex="-1" hidden></a>
+    </header>
+    <div class="content-wrapper">
         <div class="container">
             <!--Intro-->
             <div id="intro-container" class="intro-container">
