added a short about-me section, working on styling font at different screen sizes

--- a/index.html
+++ b/index.html
@@ -50,11 +50,16 @@
         <div id="projects" class="flex-projects">
 
         </div>
+        <!--About Me-->
+        <div class="about-container">
+            <p> Constantly learning what's new (while sticking with what works).always curious to try new tech, apply
+                different approaches, and work as part of a team. I consistently work towards creating applications that
+                user's find easy to use, helpful, and impactful.</p>
+        </div>
     </div>
-    <!-- <footer class="footer">
-        
-    </footer> -->
-    <!-- </div> -->
+    <footer class="footer">
+
+    </footer>
     <script src="https://kit.fontawesome.com/7e8ea69633.js" crossorigin="anonymous"></script>
 </body>
 
