switching to sidebar for navigation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/master.css" type="text/css">
     <link rel="stylesheet" href="assets/css/selfpixel.css">
-    <script src="assets/js/index.js" async></script>
+    <script src="assets/js/index.js" defer></script>
     <title>DJB</title>
 </head>
 
@@ -23,7 +23,6 @@
                 <span class="fa fa-close" aria-hidden="true"></span>
             </a>
             <!-- Self Portrait -->
-
             <ul class="main-menu__items">
                 <li class="main-menu__item">
                     <div class="sp-pixel"></div>
@@ -38,6 +37,9 @@
                     </a></li>
                 <li class="main-menu__item">
                     <a class="main-menu__link" href="assets/resume/DJBResume March 2020.pdf" target="_blank">Resume</a>
+                </li>
+                <li class="main-menu__item">
+                    <a class="main-menu__link" href="assets/resume/DJBResume March 2020.pdf" target="_blank">Blog</a>
                 </li>
             </ul>
         </nav>
@@ -59,7 +61,7 @@
         </div>
         <!--About Me-->
         <div class="about-container">
-            <p> Staying up to date with current front-end technology while simultaneously sticking with what works. Always curious to try new tech, apply
+            <p> Staying up to date with current front-end technology while sticking with what works. Always curious to try new tech, apply
                 different approaches, and work as part of a team. I consistently work towards creating applications that
                 user's find easy to use and genuinely strive to write bug-free code that functions correctly.</p>
         </div>
