added title sections with borders

--- a/index.html
+++ b/index.html
@@ -61,9 +61,13 @@
         </div>
         <!--About Me-->
         <div class="about-container">
+            <div class="about-title">
+                <h3>About</h3>
+            </div>
+            
             <p> Staying up to date with current front-end technology while sticking with what works. Always curious to try new tech, apply
                 different approaches, and work as part of a team. I consistently work towards creating applications that
-                user's find easy to use and genuinely strive to write bug-free code that functions correctly.</p>
+                user's find easy to use.</p>
         </div>
     </div>
     <!-- Footer -->
