removing unecessary rules in master.css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Navigation and Logo -->
-    <div class="container">
+    <main>
     <header>
         <a href="#main-menu" id="main-menu-toggle" class="menu-toggle" aria-label="Open main menu">
             <span class="sr-only"></span>
@@ -43,7 +43,6 @@
         <a href="#main-menu-toggle" class="backdrop" tabindex="-1" hidden></a>
     </header>
     <!-- Main Content -->
-    
         <!--Intro-->
         <section id="intro-container" class="intro-container">
             <div class="intro-container__typed" id="typedIntro">
@@ -66,7 +65,7 @@
                 different approaches, and work as part of a team. I consistently work towards creating applications that
                 user's find easy to use.</p>
         </div>
-    </div>
+    </main>
     <!-- Footer -->
     <footer class="footer">
 
