fixed navbar styling to separate links and avatar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Landing page for Daniel Beccaria">
     <link rel="stylesheet" href="assets/css/master.css" type="text/css">
     <link rel="stylesheet" href="assets/css/selfpixel.css">
     <script src="assets/js/index.js" defer></script>
@@ -17,29 +18,24 @@
             <span class="sr-only"></span>
             <span class="fa fa-bars" aria-hidden="true"></span>
         </a>
+        <!-- Nav Parent -->
         <nav id="main-menu" class="main-menu" aria-label="Main menu">
             <a href="#main-menu-toggle" id="main-menu-close" class="menu-close" aria-label="Close main menu">
                 <span class="sr-only">Close main menu</span>
                 <span class="fa fa-close" aria-hidden="true"></span>
             </a>
-            <!-- Self Portrait -->
-            <ul class="main-menu__items">
-                <li class="main-menu__item">
+            <!-- Pixel Begin -->
                     <div class="sp-pixel"></div>
-                </li>
-                <li class="main-menu__item">
+                <!-- Pixel END -->
                     <a class="main-menu__link" href="https://www.linkedin.com/in/daniel-beccaria-29270293/" target="_blank">
                         <i class="fab fa-linkedin"></i>
-                    </a></li>
-                <li class="main-menu__item">
+                    </a>
                     <a class="main-menu__link" href="https://github.com/timegated" target="_blank">
                         <i class="fab fa-github"></i>
-                    </a></li>
-                <li class="main-menu__item">
+                    </a>
                     <a class="main-menu__link" href="assets/resume/DJBResume March 2020.pdf" target="_blank">Resume</a>
-                </li>
-            </ul>
         </nav>
+        <!-- Nav Parent End -->
         <a href="#main-menu-toggle" class="backdrop" tabindex="-1" hidden></a>
     </header>
     <!-- Main Content -->
