--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Landing page for Daniel Beccaria">
+    <meta name="description" content="Daniel Beccaria Web Development">
     <link rel="stylesheet" href="assets/css/master.css" type="text/css">
     <link rel="stylesheet" href="assets/css/selfpixel.css">
-    <script src="assets/js/index.js" defer></script>
     <title>DJB</title>
 </head>
 <body>
@@ -66,6 +65,7 @@
     <footer class="footer">
 
     </footer>
+    <script src="assets/js/main.js" type="module"></script>
     <script src="https://kit.fontawesome.com/7e8ea69633.js" crossorigin="anonymous"></script>
 </body>
 </html>
