--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Daniel Beccaria Web Development">
-    <link rel="stylesheet" href="assets/css/master.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/main.css" type="text/css">
     <link rel="stylesheet" href="assets/css/selfpixel.css">
     <title>DJB</title>
 </head>
@@ -32,7 +32,7 @@
                     <a class="main-menu__link" href="https://github.com/timegated" target="_blank">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a class="main-menu__link" href="assets/resume/DJBResume March 2020.pdf" target="_blank">Resume</a>
+                    <a class="main-menu__link" href="assets/resume/DJBResume_WebDev.pdf" target="_blank">Resume</a>
         </nav>
         <!-- Nav Parent End -->
         <a href="#main-menu-toggle" class="backdrop" tabindex="-1" hidden></a>
@@ -56,9 +56,8 @@
                 <h3>About</h3>
             </div>
             
-            <p> Staying up to date with current front-end technology while sticking with what works. Always curious to try new tech, apply
-                different approaches, and work as part of a team. I consistently work towards creating applications that
-                user's find easy to use.</p>
+            <p class="about-blurb"> Staying up to date with current front-end technology while sticking with what works. Always curious to try new tech, apply
+                different approaches, and work as part of a team. I find the process of creating fully function web applications consistently rewarding.</p>
         </div>
     </main>
     <!-- Footer -->
