css: working on the responsive parts, using media queries

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <h3>About</h3>
             </div>
             
-            <p class="about-blurb"> Staying up to date with current front-end technology while sticking with what works. Always curious to try new tech, apply
-                different approaches, and work as part of a team. I find the process of creating fully function web applications consistently rewarding.</p>
+            <p class="about-blurb"> I stay up to date with current front-end technology while sticking with what works. Always curious to try new tech, apply
+                different approaches, and work as part of a team. I find the process of creating fully functioning web applications consistently rewarding.</p>
         </div>
     </main>
     <!-- Footer -->
