css/pagelayout: going for a darker background

--- a/index.html
+++ b/index.html
@@ -56,13 +56,19 @@
                 <h3>About</h3>
             </div>
             
-            <p class="about-blurb"> I stay up to date with current front-end technology while sticking with what works. Always curious to try new tech, apply
+            <p class="about-blurb"> Staying up to date with current front-end technology while sticking with what works. Always curious to try new tech, apply
                 different approaches, and work as part of a team. I find the process of creating fully functioning web applications consistently rewarding.</p>
         </div>
     </main>
     <!-- Footer -->
     <footer class="footer">
-
+        <ul>
+            <li><a href=""><img src="" alt=""></a></li>
+            <li><a href=""><img src="" alt=""></a></li>
+            <li><a href=""><img src="" alt=""></a></li>
+            <li><a href=""><img src="" alt=""></a></li>
+            <li><a href=""><img src="" alt=""></a></li>
+        </ul>
     </footer>
     <script src="assets/js/main.js" type="module"></script>
     <script src="https://kit.fontawesome.com/7e8ea69633.js" crossorigin="anonymous"></script>
