footer: added footer with icons for relevant skills

--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-        <ul>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
-        </ul>
+       <ul class="footer-content">
+           <li><a href="#projects"><i class="fab fa-react"></i></a></li>
+           <li><a href="#projects"><i class="fab fa-node-js"></i></a></li>
+           <li><a href="#projects"><i class="fab fa-js-square"></i></a></li>
+           <li><a href="#projects"><i class="fab fa-html5"></i></a></li>
+           <li><a href="#projects"><i class="fab fa-css3-alt"></i></a></li>
+           <li><a href="#projects"><i class="fas fa-database"></i></a></li>
+       </ul>
     </footer>
     <script src="assets/js/main.js" type="module"></script>
     <script src="https://kit.fontawesome.com/7e8ea69633.js" crossorigin="anonymous"></script>
