navbar: resized elements for more screen real-estate

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                         <i class="fab fa-github"></i>
                     </a>
                     <a class="main-menu__link" href="assets/resume/DJBResume_WebDev.pdf" target="_blank">Resume</a>
+                    <a class="main-menu__link" href="#projects">Work</a>
+                    <a class="main-menu__link" href="#about">About</a>
         </nav>
         <!-- Nav Parent End -->
         <a href="#main-menu-toggle" class="backdrop" tabindex="-1" hidden></a>
@@ -51,13 +53,13 @@
 
         </div>
         <!--About Me-->
-        <div class="about-container">
+        <div id="about" class="about-container">
             <div class="about-title">
                 <h3>About</h3>
             </div>
             
             <p class="about-blurb"> Staying up to date with current front-end technology while sticking with what works. Always curious to try new tech, apply
-                different approaches, and work as part of a team. I find the process of creating fully functioning web applications consistently rewarding.</p>
+                different approaches, and work as part of a team. I find the process of creating functioning web applications consistently rewarding.</p>
         </div>
     </main>
     <!-- Footer -->
