footer: reformatted and centered footer elements

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="fa fa-bars" aria-hidden="true"></span>
         </a>
         <!-- Nav Parent -->
-        <nav id="main-menu" class="main-menu" aria-label="Main menu">
+        <nav id="main-menu" class="main-menu" aria-label="Main Menu">
             <a href="#main-menu-toggle" id="main-menu-close" class="menu-close" aria-label="Close main menu">
                 <span class="sr-only">Close main menu</span>
                 <span class="fa fa-close" aria-hidden="true"></span>
@@ -33,7 +33,7 @@
                         <i class="fab fa-github"></i>
                     </a>
                     <a class="main-menu__link" href="assets/resume/DJBResume_WebDev.pdf" target="_blank">Resume</a>
-                    <a class="main-menu__link" href="#projects">Work</a>
+                    <a class="main-menu__link" href="#projects-container">Work</a>
                     <a class="main-menu__link" href="#about">About</a>
         </nav>
         <!-- Nav Parent End -->
@@ -46,11 +46,13 @@
             </div>
         </section>
         <!--Projects-->
-        <div class="projects-title">
-            <h3>Projects</h3>
-        </div>
-        <div id="projects" class="projects-flex">
-
+        <div id="projects-container">
+            <div class="projects-title">
+                <h3>Work</h3>
+            </div>
+            <div id="projects" class="projects-flex">
+            
+            </div>
         </div>
         <!--About Me-->
         <div id="about" class="about-container">
@@ -65,12 +67,36 @@
     <!-- Footer -->
     <footer class="footer">
        <ul class="footer-content">
-           <li><a href="#projects"><i class="fab fa-react"></i></a></li>
-           <li><a href="#projects"><i class="fab fa-node-js"></i></a></li>
-           <li><a href="#projects"><i class="fab fa-js-square"></i></a></li>
-           <li><a href="#projects"><i class="fab fa-html5"></i></a></li>
-           <li><a href="#projects"><i class="fab fa-css3-alt"></i></a></li>
-           <li><a href="#projects"><i class="fas fa-database"></i></a></li>
+           <li>
+               <a href="#projects">
+                   <i class="fab fa-react"></i>
+                </a>
+            </li>
+           <li>
+               <a href="#projects">
+                   <i class="fab fa-node-js"></i>
+                </a>
+            </li>
+           <li>
+               <a href="#projects">
+                   <i class="fab fa-js-square"></i>
+                </a>
+            </li>
+           <li>
+               <a href="#projects">
+                   <i class="fab fa-html5"></i>
+                </a>
+            </li>
+           <li>
+               <a href="#projects">
+                   <i class="fab fa-css3-alt"></i>
+                </a>
+            </li>
+           <li>
+               <a href="#projects">
+                   <i class="fas fa-database"></i>
+                </a>
+            </li>
        </ul>
     </footer>
     <script src="assets/js/main.js" type="module"></script>
