mediaQ: doing some more work with media queries for all screen sizes

--- a/index.html
+++ b/index.html
@@ -59,41 +59,43 @@
             <div class="about-title">
                 <h3>About</h3>
             </div>
-            
-            <p class="about-blurb"> Staying up to date with current front-end technology while sticking with what works. Always curious to try new tech, apply
-                different approaches, and work as part of a team. I find the process of creating functioning web applications consistently rewarding.</p>
+            <div class="about-content">
+                <p class="about-blurb"> Staying up to date with current front-end technology while sticking with what works. Always
+                    curious to try new tech, apply different approaches, and work as part of a team. I find the process of creating functioning web applications
+                    consistently rewarding.</p>
+            </div>
         </div>
     </main>
     <!-- Footer -->
     <footer class="footer">
        <ul class="footer-content">
            <li>
-               <a href="#projects">
+               <a href="#projects-container">
                    <i class="fab fa-react"></i>
                 </a>
             </li>
            <li>
-               <a href="#projects">
+               <a href="#projects-container">
                    <i class="fab fa-node-js"></i>
                 </a>
             </li>
            <li>
-               <a href="#projects">
+               <a href="#projects-container">
                    <i class="fab fa-js-square"></i>
                 </a>
             </li>
            <li>
-               <a href="#projects">
+               <a href="#projects-container">
                    <i class="fab fa-html5"></i>
                 </a>
             </li>
            <li>
-               <a href="#projects">
+               <a href="#projects-container">
                    <i class="fab fa-css3-alt"></i>
                 </a>
             </li>
            <li>
-               <a href="#projects">
+               <a href="#projects-container">
                    <i class="fas fa-database"></i>
                 </a>
             </li>
