working on projects section: added placeholder images in works section

--- a/saved.html
+++ b/saved.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/master.css">
-  <script src="assets/js/main.js" defer></script>
+  <script type="module" src="assets/js/main.js" defer></script>
   <title>Document</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
         <nav>
           <ul>
             <li>
-              <a href="#projects-container">Work</a>
+              <a href="#work">Work</a>
             </li>
               <li>
                 <a href="assets/resume/DJBResume_WebDev.pdf" target="_blank">Resume</a>
@@ -37,14 +37,25 @@
       </div>
     </section>
    <main id="wrapper">
-      <section id="intro" class="wrapper style3 fullscreen fade-up">
+      <section id="intro" class="wrapper style1 fullscreen fade-up">
         <div class="inner">
             <h1>Daniel Beccaria</h1>
             <p>Front-End Web Development</p>
             <ul class="actions">
-              <li><a href="#one" class="button scrolly">Seymour Buttons</a></li>
+              <li><a href="#one" class="button">Seymour Buttons</a></li>
             </ul>
         </div>
+        <section id="work" class="wrapper style1-alt works">
+          <section>
+            <a href="#" class="image"><img src="./assets/images/classtracker.PNG" alt="WoW Class Tracker" data-position="center center"></a>
+          </section>
+          <section>
+            <a href="#" class="image"><img src="./assets/images/booksearchjpg.png" alt="WoW Class Tracker" data-position="center center"></a>
+          </section>
+          <section>
+            <a href="#" class="image"><img src="./assets/images/wordgamesjpg.png" alt="WoW Class Tracker" data-position="center center"></a>
+          </section>
+        </section>
       </section>
    </main>
 </body>
