works: added a border to differentiate between projects

--- a/saved.html
+++ b/saved.html
@@ -23,12 +23,12 @@
                   <a href="#about">About</a>
                 </li>
             <li>
-              <a href="https://www.linkedin.com/in/daniel-beccaria-29270293/">
+              <a href="https://www.linkedin.com/in/daniel-beccaria-29270293/" target="_blank">
                 LinkedIn
               </a>
             </li>
             <li>
-              <a href="https://github.com/timegated">
+              <a href="https://github.com/timegated" target="_blank">
                 GitHub
               </a>
             </li>
@@ -42,21 +42,13 @@
             <h1>Daniel Beccaria</h1>
             <p>Front-End Web Development</p>
             <ul class="actions">
-              <li><a href="#one" class="button">Seymour Buttons</a></li>
+              <li><a href="#work" class="button">See My Work</a></li>
             </ul>
-        </div>
-        <section id="work" class="wrapper style1-alt works">
-          <section>
-            <a href="#" class="image"><img src="./assets/images/classtracker.PNG" alt="WoW Class Tracker" data-position="center center"></a>
-          </section>
-          <section>
-            <a href="#" class="image"><img src="./assets/images/booksearchjpg.png" alt="WoW Class Tracker" data-position="center center"></a>
-          </section>
-          <section>
-            <a href="#" class="image"><img src="./assets/images/wordgamesjpg.png" alt="WoW Class Tracker" data-position="center center"></a>
-          </section>
-        </section>
+        </div> 
       </section>
+        <section id="work" class="wrapper style2-alt works">
+          <!-- Works Here -->
+        </section>
    </main>
 </body>
 </html>
