projects: added tech stack array to data.json

--- a/saved.html
+++ b/saved.html
@@ -42,11 +42,13 @@
             <h1>Daniel Beccaria</h1>
             <p>Front-End Web Development</p>
             <ul class="actions">
-              <li><a href="#work" class="button">See My Work</a></li>
+              <li>
+                <a href="#work" class="button">See My Work</a>
+              </li>
             </ul>
         </div> 
       </section>
-        <section id="work" class="wrapper style2-alt works">
+        <section id="work" class="wrapper style1-alt works">
           <!-- Works Here -->
         </section>
    </main>
