icons: working on getting icons to display

--- a/saved.html
+++ b/saved.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/master.css">
-  <script type="module" src="assets/js/main.js" defer></script>
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Daniel Beccaria Web Development">
+    <link rel="stylesheet" href="assets/css/master.css">
+    <script type="module" src="assets/js/main.js" defer></script>
+    <script src="https://kit.fontawesome.com/7e8ea69633.js" crossorigin="anonymous" defer></script>
+
+    <title>DJB</title>
 </head>
 <body>
   <!-- Old Menu -->
@@ -40,16 +43,20 @@
       <section id="intro" class="wrapper style1 fullscreen fade-up">
         <div class="inner">
             <h1>Daniel Beccaria</h1>
-            <p>Front-End Web Development</p>
             <ul class="actions">
               <li>
-                <a href="#work" class="button">See My Work</a>
+                <a href="#work" class="button primary large">See My Work</a>
               </li>
             </ul>
         </div> 
       </section>
         <section id="work" class="wrapper style1-alt works">
           <!-- Works Here -->
+        </section>
+        <section id="about" class="wrapper style2">
+          <div class="inner">
+            <h2>About</h2>
+          </div>
         </section>
    </main>
 </body>
